src/BlazorUI/Demo/Client/Shared/Shared/NavMenu.razor.scss
@import '../Styles/bit-css-variables.scss';
@import '../Styles/abstracts/_vars.scss';
@import '../Styles/abstracts/_colors.scss';
@import '../Styles/abstracts/_functions.scss';
@import '../Styles/abstracts/_media-queries.scss';

.nav-menu {
    left: 0;
    outline: 0;
    z-index: 1;
    display: flex;
    flex-shrink: 0;
    flex: 1 0 auto;
    position: sticky;
    overflow-y: auto;
    top: rem($HeaderHeight);
    flex-direction: column;
    width: rem($NavMenuWidth);
    max-width: rem($NavMenuWidth);
    height: calc(100vh - rem($HeaderHeight));
    background-color: $bit-color-background-primary;
    border-right: rem(1px) solid $bit-color-border-secondary2;

    @include lt-lg {
        top: 0;
        inset: 0;
        height: 100vh;
        z-index: 1003;
        position: fixed;
    }

    @include sm {
        border-radius: 0 rem(10px) rem(10px) 0;
    }
}

.nav-menu--desktop {
    display: flex;

    @include lt-lg {
        display: none;
    }
}

.nav-menu--mobile {
    display: none;

    @include lt-lg {
        display: block;
    }
}

.nav-menu-shadow {
    inset: 0;
    z-index: 1002;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.5);
}

.search-box-container {
    width: 100%;
    box-sizing: border-box;
    padding: rem(24px) rem(22px);
}

.nav-menu-list {
    width: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    box-sizing: border-box;
    height: calc(100% - #{rem(89px)});

    &::-webkit-scrollbar {
        width: rem(6px);
    }
}

